--- a/src/components/Navbar/styles.scss
+++ b/src/components/Navbar/styles.scss
@@ -1,7 +1,48 @@
 .navbar{
-  width: 100%;
-  height: 70px;
-  text-align: center;
-  padding-top: 10px;
+  width: 250px;
+  height: 100vh;
   background-color: var(--secondary-color);
+  border-right: solid 1px var(--primary-color);
+
+  h5 {
+    font-size: 14px;
+    padding-left: 10px;
+    padding-top: 25px;
+  }
+  
+  .navbar-logo {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    text-align: center;
+
+    a {   
+      padding-top: 30px;
+    padding-bottom: 30px;   
+      color: var(--fourth-color);
+      text-decoration: none;
+      font-size: 22px;
+      font-weight: 800;
+    }
+  }
+
+  .navbar-link {
+    a {
+      padding-left: 10px;
+      color: var(--fourth-color);
+      text-decoration: none;
+      font-size: 12px;
+    }
+    
+    a:hover {
+      color: var(--third-color);
+      text-decoration: none;
+      font-size: 12px;
+    }
+  }
 }
+
+
+
+
+
+
