--- a/src/pages/HomePage/styles.scss
+++ b/src/pages/HomePage/styles.scss
@@ -1,26 +1,6 @@
-.homepage-title {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    text-align: center;
-    a {   
-      color: black;
-      text-decoration: none;
-      font-size: 30px;
-      font-weight: 800;
-    }
-
-    a:hover{
-      color:var(--purple-color)
-    }
-  }
-
-button {
-  cursor: pointer;
-}
-
 .container-homepage{
-  width: 100vw;
-  height:100vh;  
+  //width: 100vw;
+  height: calc(100vh - 66px);  
   text-align: center;
   background-color: var(--bg-light-color);
   
@@ -53,7 +33,7 @@ button {
       }  
   }
   
-  @media (max-width: 600px) {
+  @media (max-width: 650px) {
     .main{
       grid-template-columns: 1fr 1fr 1fr;
     }  
