--- a/src/pages/Navbar/styles.scss
+++ b/src/pages/Navbar/styles.scss
@@ -1,14 +1,13 @@
 .navbar {
   background-color: var(--bg-light-color);
-  width: 100vw;
-  //position: absolute;
-  //margin-bottom: 1px;
+  //width: 100vw;
+  
   .logo {
     padding-top: 10px;
     padding-bottom: 10px;
     text-align: center;
     a {   
-      color: #6e6e73;
+      color: var(--font-light-color);
       text-decoration: none;
       font-size: 30px;
       font-weight: 800;
